@@ -30,7 +30,7 @@
 # instead).
 #
 # C-B : break ${fname}:${lnum}   # set breakpoint at current line
-# C-E : clear ${fname}:${lnum}   # clear breakpoint at current line
+# C-K : clear ${fname}:${lnum}   # clear breakpoint at current line
 # C-P : print ${text}            # print value of selection at mouse position
 # C-Z : interrupt                # interrupt the execution of the target
 # S-C : continue
